// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tagInput > should renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_0_"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="true"
          data-error="false"
          data-readonly="false"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly readOnly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="true"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_8_"
              readonly=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="true"
          data-readonly="false"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              aria-describedby="_r_p_"
              class="styles__sjgcm26"
              data-size="large"
              id="_r_o_"
              type="text"
              value=""
            />
          </div>
          <div
            class="styles__sjgcm25"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzf uv_icons_1sbwqkz1k"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_48__1do42ls2m"
        id="_r_p_"
        role="status"
      >
        This is an error
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        for="_r_c_"
      >
        Label
      </label>
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_c_"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with labelDescription 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
      >
        <label
          class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          for="_r_i_"
        />
        <div>
          label description
        </div>
      </div>
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_i_"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with placeholder 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_14_"
              placeholder="Enter a value here"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with some tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_closable_true__1gaaepy8"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  hello
                </span>
              </span>
              <button
                aria-label="Close tag"
                class="styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_true__1gaaepyg styles_undefined_compound_16__1gaaepyy"
                data-testid="close-tag"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_closable_true__1gaaepy8"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  world
                </span>
              </span>
              <button
                aria-label="Close tag"
                class="styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_true__1gaaepyg styles_undefined_compound_16__1gaaepyy"
                data-testid="close-tag"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_18_"
              name="radio"
              placeholder=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with some tags objects 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_closable_true__1gaaepy8"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  hello
                </span>
              </span>
              <button
                aria-label="Close tag"
                class="styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_true__1gaaepyg styles_undefined_compound_16__1gaaepyy"
                data-testid="close-tag"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_closable_true__1gaaepy8"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  world
                </span>
              </span>
              <button
                aria-label="Close tag"
                class="styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_true__1gaaepyg styles_undefined_compound_16__1gaaepyy"
                data-testid="close-tag"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_1k_"
              name="radio"
              placeholder=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="true"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              aria-describedby="_r_v_"
              class="styles__sjgcm26"
              data-size="large"
              id="_r_u_"
              type="text"
              value=""
            />
          </div>
          <div
            class="styles__sjgcm25"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkz1j"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M8 2.273a5.727 5.727 0 1 0 0 11.454A5.727 5.727 0 0 0 8 2.273M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8m9.491-2.109a.636.636 0 0 1 .148.888l-2.651 3.712a.636.636 0 0 1-.968.08l-1.591-1.59a.636.636 0 0 1 .9-.9l1.06 1.06 2.214-3.102a.636.636 0 0 1 .888-.148"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_success__1do42lse style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_56__1do42ls2u"
        id="_r_v_"
        role="status"
      >
        This is a success
      </span>
    </div>
  </div>
</DocumentFragment>
`;
